--- a/css/latte.css
+++ b/css/latte.css
@@ -10,7 +10,19 @@
   --lightblue: #cadbf8;
   --mainfont: "Poppins", sans-serif;
 }
-
+body {
+  font-family: var(--mainfont);
+  font-size: 1.125rem;
+  line-height: 1.5;
+  padding: 0;
+  margin: 0;
+  background: var(--catalina);
+}
+.grid-container {
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
 .top-nav {
   display: flex;
   justify-content: center;
@@ -70,14 +82,6 @@ nav ul {
 nav a {
   text-decoration: none;
   color: var(--white);
-}
-
-body {
-  font-family: var(--mainfont);
-  font-size: 1.125rem;
-  line-height: 1.5;
-  padding: 0;
-  margin: 0;
 }
 
 @media (min-width: 1000px) {
