added javascript for hamburger button

--- a/css/index.css
+++ b/css/index.css
@@ -125,6 +125,9 @@ footer {
   padding-bottom: 1rem;
   border-top: var(--sunglow) 0.5rem solid;
 }
+#burger-button {
+  display: none;
+}
 @media (min-width: 650px) {
   .menu {
     display: grid;
@@ -139,5 +142,21 @@ footer {
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr;
     gap: 2rem;
+  }
+}
+@media (max-width: 412px) {
+  #burger-button {
+    display: block;
+    width: 30px;
+    margin: 0 auto;
+  }
+  nav ul {
+    display: none;
+  }
+  svg {
+    display: none;
+  }
+  .visible {
+    display: block;
   }
 }
